app/static/css/message.css
.message {
  width: 100%;
  overflow-wrap: break-word;
  display: flex;
  gap: var(--section-gap);
  padding: var(--section-gap);
  padding-bottom: 0;
}

.message:last-child {
  animation: 0.6s show_message;
}

@keyframes show_message {
  from {
    transform: translateY(10px);
    opacity: 0;
  }
}

.message .avatar-container img {
  max-width: 48px;
  max-height: 48px;
  box-shadow: 0.4px 0.5px 0.7px -2px rgba(0, 0, 0, 0.08),
    1.1px 1.3px 2px -2px rgba(0, 0, 0, 0.041),
    2.7px 3px 4.8px -2px rgba(0, 0, 0, 0.029),
    9px 10px 16px -2px rgba(0, 0, 0, 0.022);
}

.message .avatar-container img {
  max-width: 48px;
  max-height: 48px;
  box-shadow: 0.4px 0.5px 0.7px -2px rgba(0, 0, 0, 0.08),
    1.1px 1.3px 2px -2px rgba(0, 0, 0, 0.041),
    2.7px 3px 4.8px -2px rgba(0, 0, 0, 0.029),
    9px 10px 16px -2px rgba(0, 0, 0, 0.022);
}

.message .content {
  display: flex;
  flex-direction: column;
  width: 90%;
  gap: 18px;
}

.message .content p,
.message .content li,
.message .content code {
  font-size: 15px;
  line-height: 1.4;
}

/* Extra */
#messages {
  overflow-x: hidden;
  width: 100%;
  box-sizing: border-box;
}

.message pre {
  white-space: pre-wrap;
  word-break: break-word;
  font-size: 15px;
  line-height: 1.4;
  font-family: "Inter", system-ui, sans-serif;
  text-align: left;
}

.message p {
  font-size: 15px;
  line-height: 1.4;
  font-family: "Inter", system-ui, sans-serif;
}

.message a {
  color: var(--link-color);
  text-decoration: underline;
  font-weight: 600;
  transition: color 0.3s ease;
}

.message a:hover,
.message a:focus {
  color: var(--link-hover-color);
  text-shadow: 0 0 1px var(--link-hover-color);
  outline: none;
}

.message.user {
  display: flex;
  align-items: flex-start;
  margin: 10px 0;
  width: 100%;
  box-sizing: border-box;
  margin-top: -3px;
}

.message.user .avatar-container {
  margin-right: 5px;
  order: 2;
  margin-left: 10px;
}

.message.user .content {
  margin-left: auto;
  order: 1;
  background-color: var(--user-msg-bg);
  padding: 10px;
  border-radius: 18px;
  text-align: right;
  max-width: 80%;
  width: fit-content;
  word-break: break-word;
}

.message.chat-bot .content {
  margin-left: 10px;
  width: 100%;
  margin-bottom: 50px;
}

.message.chat-bot .content pre {
  padding: 1em;
}

.message.chat-bot .content h1,h2,h3 {
  margin-top: 1.2rem;
  margin-bottom: 0.75rem;
  font-weight: bold;
}

hr{
    border-top-width: 1px;
    color: inherit;
    height: 0;
    margin-bottom: 1em;
    margin-top: 1em;
    border-color: var(--hr-line);
}

.message.chat-bot .content h1 { font-size: 1.6rem; }
.message.chat-bot .content h2 { font-size: 1.4rem; }
.message.chat-bot .content h3 { font-size: 1.2rem; }

.message.chat-bot .content blockquote {
  border-left: 4px solid #ccc;
  margin: 1em 0;
  padding-left: 1em;
  color: #838383;
  font-style: italic;
}

.message.chat-bot .content ul, ol {
  margin-left: 1.2em;
  padding-left: 1em;
}
.message.chat-bot .content li {
  margin-bottom: 0.4em;
}
.message.chat-bot .content ol li strong {
  font-size: 18px;
}
  



.search-label {
  font-size: 0.9rem;
  color: var(--conversations);
  padding: 2px 6px;
  border-radius: 4px;
  margin-bottom: 3px;
  display: inline-block;
}

@media screen and (max-height: 720px) {
  .message {
    padding: 12px;
    gap: 0;
    /* background-color: aliceblue; */
  }

  .message .content {
    margin-left: 8px;
    width: 80%;
  }

  .message .avatar-container img {
    max-width: 32px;
    max-height: 32px;
  }

  .message .content,
  .message .content p,
  .message .content li,
  .message .content code {
    font-size: 15px;
    line-height: 1.4;
  }
}

@media screen and (max-width: 720px) and (max-height: 721px) {
  .conversation {
    height: 100%;
  }

  .message .content,
  .message .content p,
  .message .content li,
  .message .content code,
  .message .content pre {
    font-size: 13px;
    line-height: 1.3;
  }
}

@media screen and (max-width: 720px) and (min-height: 721px) {
  .message .content,
  .message .content p,
  .message .content li,
  .message .content code,
  .message .content pre {
    font-size: 13px;
    line-height: 1.3;
  }

  .message.chat-bot .content {
    margin-left: 5px;
    width: 100%;
  }

  .message .content {
    margin-left: -8px;
    width: 80%;
  }

  .message .avatar-container img {
    max-width: 32px;
    max-height: 32px;
  }

  .message.chat-bot .avatar-container {
    margin-right: -15px;
  }

  .message.user .content {
    margin-right: -20px;
  }

  .conversation {
    height: 100%;
  }
}

